Bug 544560 - [12][compiler] resolution error in switch expression with single case